# genesis_walk_these_ways_tercher_student

./: .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/user_guide/: index.md
genesis_lr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legged_gym/: __init__.py
legged_gym/envs/: __init__.py
legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
legged_gym/envs/bipedal_walker/: bipedal_walker.py  bipedal_walker_config.py
legged_gym/envs/go2/: go2.py  go2_config.py
legged_gym/envs/go2/go2_ee/: go2_ee.py  (+1 more)
legged_gym/simulator/: __init__.py  simulator.py
legged_gym/utils/: __init__.py  gs_utils.py  helpers.py  logger.py  math_utils.py  task_registry.py  terrain.py  terrain_utils.py
logs/GO2_SPRING_JUMP/Oct15_07-39-24_step_gait/: go2_spring_jump.py  go2_spring_jump_config.py
resources/plane/: plane.urdf
resources/sysid/: 20250617_motor_response_real_200Hz.csv
rsl_rl/: setup.py
rsl_rl/algorithms/: __init__.py  ppo_ee.py  ppo_ts.py
rsl_rl/modules/: __init__.py  actor_critic_ee.py  actor_critic_ts.py
rsl_rl/rsl_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rsl_rl/runners/: __init__.py  ee_runner.py  on_policy_runner.py  ts_runner.py
rsl_rl/storage/: __init__.py  rollout_storage_ee.py  rollout_storage_ts.py
rsl_rl/utils/: runner_registry.py
scripts/: play.py  play_ee.py  play_ts.py  play_wtw.py  train.py
scripts/sysid/: run_go2_sysid.py
test_resources/: tests.md
test_resources/system_identification_in_air/: sysid.md
(+37 files in other folders)
